--- a/institution/index.html
+++ b/institution/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SBCODL INSTITUTION </title>
+    
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://mercury.phonepe.com/web/bundle/checkout.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
